--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,26 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+
+    //TextSize
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
+
+
     implementation 'com.google.firebase:firebase-database:19.7.0'
+    //Padding
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
 
 
+    //GIF
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
+//For rounded image
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    //For circle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
 }
