--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,11 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
 
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     //GIF
+
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
 
 //For rounded image
     implementation 'com.makeramen:roundedimageview:2.3.0'
@@ -68,5 +70,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+
+
 
 }
