--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,6 @@
         </activity>
         <activity
             android:name=".DashBoardActivity"
-            android:permission="android.permission.INTERNET"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -42,7 +41,6 @@
         <activity
             android:name=".RegistrationActivity"
             android:exported="false"
-            android:permission="android.permission.INTERNET"
             android:parentActivityName=".LoginActivity">
             <meta-data
                 android:name="android.app.lib_name"
@@ -50,8 +48,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="true"
-            android:permission="android.permission.INTERNET">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
