--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-
-
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -70,7 +69,19 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    def camerax_version = '1.0.0-beta07'
 
+// CameraX core library using camera2 implementation
+
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+
+// CameraX Lifecycle Library
+
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+
+// CameraX View class
+
+    implementation 'androidx.camera:camera-view:1.0.0-alpha14'
 
 
 }
